# sequeler

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  com.github.alecaddd.sequeler.json  com.github.alecaddd.sequeler.yml  meson.build
.github/: FUNDING.yml
.github/workflows/: build.yml  flatpak.yml
.snapcraft/: travis_snapcraft.cfg
build-aux/: com.github.alecaddd.sequeler.json
build-aux/snap/: snapcraft.yaml
cmake/: FindGLibGenMarshal.cmake  FindGirDocTool.cmake  FindGirScanner.cmake  FindGtkDoc.cmake  FindPandoc.cmake  FindValaDoc.cmake  FindValac.cmake  FindVapiGen.cmake  GirCompiler.cmake  GirScanner.cmake  Uninstall.cmake  VapiGenerate.cmake
data/: CMakeLists.txt  assets.gresource.xml  com.github.alecaddd.sequeler.appdata.xml  com.github.alecaddd.sequeler.appdata.xml.in  com.github.alecaddd.sequeler.appdata.xml.in.in  com.github.alecaddd.sequeler.desktop  com.github.alecaddd.sequeler.desktop.in  com.github.alecaddd.sequeler.desktop.in.in  com.github.alecaddd.sequeler.mime.xml  meson.build  stylesheet.css
debian/: changelog  control  copyright  rules
meson/: post_install.py
packaging/snap/: snapcraft.yaml
po/: LINGUAS  POTFILES  ar_EG.po  ars.po  ba.po  be.po  bg.po  ca.po  ce.po  com.github.alecaddd.sequeler.pot  cs.po  cu.po  de.po  en_GB.po  eo.po  es.po  et.po  fi.po  fr.po  fr_CA.po  he.po  hi.po  ho.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lg.po  lt.po  lv.po  meson.build  mh.po  mk.po  mt.po  nb.po  nd.po  nl.po  pa.po  (+20 more)
po/extra/: LINGUAS  POTFILES  de.po  extra.pot  fr.po  lt.po  meson.build
schemas/: CMakeLists.txt  com.github.alecaddd.sequeler.gschema.xml  com.github.alecaddd.sequeler.gschema.xml.in  meson.build
snap/: snapcraft.yaml
snap/gui/: com.github.alecaddd.sequeler.desktop  sequeler.desktop
src/: Application.vala  Main.vala  Window.bk.vala  Window.vala  application.vala  config.vala.in  main.vala  meson.build  sequeler  sequeler.vala
src/Layouts/: DataBaseSchema.vala  DataBaseView.vala  HeaderBar.vala  Library.vala  Main.vala  Welcome.vala
src/Layouts/Views/: Content.vala  Query.vala  Relations.vala  Structure.vala
src/Models/: DataColumn.vala
src/Partials/: ButtonType.vala  DataBasePanel.vala  DataGrid.vala  DataGridCell.vala  DataGridHeader.vala  DatabasePanel.vala  DatabaseTable.vala  ErrorDialog.vala  HeaderBar.vala  HeaderTypes.vala  Helpers.vala  LibraryItem.vala  MessageDialog.vala  QueryBuilder.vala  SimpleSettingsPage.vala  ToolBar.vala  TreeBuilder.vala
src/Services/: ActionManager.vala  Connect.vala  Connection.vala  ConnectionManager.vala  DataBase.vala  DataManager.vala  FileManager.vala  PasswordManager.vala  Settings.vala  TreeBuilder.vala  UpgradeManager.vala
src/Services/Types/: DataBaseType.vala  MySQL.vala  PostgreSQL.vala  SQLite.vala
src/Widgets/: CancelQueryButton.vala  ConnectionDialog.bk.vala  ConnectionDialog.vala  DataBaseOpen.vala  Library.vala  LibraryItem.vala  ModeSwitch.vala  QueryParamsDialog.vala  QuickConnectionDialog.vala  RunQueryButton.vala  SettingsDialog.vala  Welcome.vala
vapi/: libgda-5.0.deps  libgda-5.0.vapi  libgda-ui-5.0.deps  libgda-ui-5.0.vapi  libsecret-1.vapi  libssh2.vapi
